--- a/Mastering and Building LLM course/CH4/CH4 Coding LLM Architecture.ipynb
+++ b/Mastering and Building LLM course/CH4/CH4 Coding LLM Architecture.ipynb
@@ -718,8 +718,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-11T16:17:09.721416Z",
-     "start_time": "2026-02-11T16:17:09.710974Z"
+     "end_time": "2026-02-11T21:15:12.587801Z",
+     "start_time": "2026-02-11T21:15:12.580195Z"
     }
    },
    "cell_type": "code",
@@ -741,7 +741,7 @@
     "        for layer in self.layers:\n",
     "            layer_output = layer(out)\n",
     "            if self.use_shortcut and x.shape == layer_output.shape:\n",
-    "                out += layer_output\n",
+    "                out = out + layer_output\n",
     "            else:\n",
     "                out = layer_output\n",
     "\n",
@@ -751,13 +751,13 @@
    ],
    "id": "e938c9a1e9eb9e06",
    "outputs": [],
-   "execution_count": 109
+   "execution_count": 124
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-11T16:17:10.520044Z",
-     "start_time": "2026-02-11T16:17:10.498371Z"
+     "end_time": "2026-02-11T21:15:14.164646Z",
+     "start_time": "2026-02-11T21:15:14.146406Z"
     }
    },
    "cell_type": "code",
@@ -771,13 +771,13 @@
    ],
    "id": "baea16534465b503",
    "outputs": [],
-   "execution_count": 110
+   "execution_count": 125
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-11T16:17:29.029156Z",
-     "start_time": "2026-02-11T16:17:29.017703Z"
+     "end_time": "2026-02-11T21:15:14.942448Z",
+     "start_time": "2026-02-11T21:15:14.932139Z"
     }
    },
    "cell_type": "code",
@@ -790,18 +790,18 @@
        "tensor([[0.0610]], grad_fn=<MulBackward0>)"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 114
+   "execution_count": 126
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-11T16:17:20.903253Z",
-     "start_time": "2026-02-11T16:17:20.895012Z"
+     "end_time": "2026-02-11T21:15:17.781571Z",
+     "start_time": "2026-02-11T21:15:17.773269Z"
     }
    },
    "cell_type": "code",
@@ -822,13 +822,13 @@
    ],
    "id": "44c277ccc38b301f",
    "outputs": [],
-   "execution_count": 113
+   "execution_count": 127
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-11T16:17:43.913515Z",
-     "start_time": "2026-02-11T16:17:43.808599Z"
+     "end_time": "2026-02-11T21:15:18.558936Z",
+     "start_time": "2026-02-11T21:15:18.547743Z"
     }
    },
    "cell_type": "code",
@@ -847,49 +847,72 @@
      ]
     }
    ],
-   "execution_count": 115
+   "execution_count": 128
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-11T16:20:02.635340Z",
-     "start_time": "2026-02-11T16:20:02.627744Z"
+     "end_time": "2026-02-11T21:15:20.773841Z",
+     "start_time": "2026-02-11T21:15:20.766773Z"
     }
    },
    "cell_type": "code",
    "source": "model_with_shortcut = DeepNN(layer_sizes, use_shortcut=True)",
    "id": "b1d1df3ecc4fba52",
    "outputs": [],
-   "execution_count": 119
+   "execution_count": 129
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-11T16:20:03.291435Z",
-     "start_time": "2026-02-11T16:20:03.118178Z"
+     "end_time": "2026-02-11T21:15:22.483914Z",
+     "start_time": "2026-02-11T21:15:22.472526Z"
     }
    },
    "cell_type": "code",
-   "source": "print_gradients(model_with_shortcut, sample_input)",
+   "source": "model_with_shortcut(sample_input)",
+   "id": "7572f59636711bdc",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.0269]], grad_fn=<MulBackward0>)"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 130
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-11T21:15:24.089303Z",
+     "start_time": "2026-02-11T21:15:24.076890Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "sample_input_2 = torch.tensor([[1., 0., -1.]])\n",
+    "print_gradients(model_with_shortcut, sample_input_2)"
+   ],
    "id": "732d2330c654cf77",
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "one of the variables needed for gradient computation has been modified by an inplace operation: [torch.FloatTensor [1, 3]], which is output 0 of AddBackward0, is at version 4; expected version 3 instead. Hint: enable anomaly detection to find the operation that failed to compute its gradient, with torch.autograd.set_detect_anomaly(True).",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mRuntimeError\u001B[39m                              Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[120]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m \u001B[43mprint_gradients\u001B[49m\u001B[43m(\u001B[49m\u001B[43mmodel_with_shortcut\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msample_input\u001B[49m\u001B[43m)\u001B[49m\n",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[113]\u001B[39m\u001B[32m, line 8\u001B[39m, in \u001B[36mprint_gradients\u001B[39m\u001B[34m(model, x)\u001B[39m\n\u001B[32m      5\u001B[39m loss = nn.MSELoss()\n\u001B[32m      6\u001B[39m loss = loss(output, target)    \u001B[38;5;66;03m#2\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m8\u001B[39m \u001B[43mloss\u001B[49m\u001B[43m.\u001B[49m\u001B[43mbackward\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m          \u001B[38;5;66;03m#3\u001B[39;00m\n\u001B[32m     10\u001B[39m \u001B[38;5;28;01mfor\u001B[39;00m name, param \u001B[38;5;129;01min\u001B[39;00m model.named_parameters():\n\u001B[32m     11\u001B[39m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[33m'\u001B[39m\u001B[33mweight\u001B[39m\u001B[33m'\u001B[39m \u001B[38;5;129;01min\u001B[39;00m name:\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m~\\anaconda3\\envs\\DATAENLIGHT_AI_LAB\\Lib\\site-packages\\torch\\_tensor.py:625\u001B[39m, in \u001B[36mTensor.backward\u001B[39m\u001B[34m(self, gradient, retain_graph, create_graph, inputs)\u001B[39m\n\u001B[32m    615\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m has_torch_function_unary(\u001B[38;5;28mself\u001B[39m):\n\u001B[32m    616\u001B[39m     \u001B[38;5;28;01mreturn\u001B[39;00m handle_torch_function(\n\u001B[32m    617\u001B[39m         Tensor.backward,\n\u001B[32m    618\u001B[39m         (\u001B[38;5;28mself\u001B[39m,),\n\u001B[32m   (...)\u001B[39m\u001B[32m    623\u001B[39m         inputs=inputs,\n\u001B[32m    624\u001B[39m     )\n\u001B[32m--> \u001B[39m\u001B[32m625\u001B[39m \u001B[43mtorch\u001B[49m\u001B[43m.\u001B[49m\u001B[43mautograd\u001B[49m\u001B[43m.\u001B[49m\u001B[43mbackward\u001B[49m\u001B[43m(\u001B[49m\n\u001B[32m    626\u001B[39m \u001B[43m    \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mgradient\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mretain_graph\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcreate_graph\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43minputs\u001B[49m\u001B[43m=\u001B[49m\u001B[43minputs\u001B[49m\n\u001B[32m    627\u001B[39m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m~\\anaconda3\\envs\\DATAENLIGHT_AI_LAB\\Lib\\site-packages\\torch\\autograd\\__init__.py:354\u001B[39m, in \u001B[36mbackward\u001B[39m\u001B[34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001B[39m\n\u001B[32m    349\u001B[39m     retain_graph = create_graph\n\u001B[32m    351\u001B[39m \u001B[38;5;66;03m# The reason we repeat the same comment below is that\u001B[39;00m\n\u001B[32m    352\u001B[39m \u001B[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001B[39;00m\n\u001B[32m    353\u001B[39m \u001B[38;5;66;03m# calls in the traceback and some print out the last line\u001B[39;00m\n\u001B[32m--> \u001B[39m\u001B[32m354\u001B[39m \u001B[43m_engine_run_backward\u001B[49m\u001B[43m(\u001B[49m\n\u001B[32m    355\u001B[39m \u001B[43m    \u001B[49m\u001B[43mtensors\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    356\u001B[39m \u001B[43m    \u001B[49m\u001B[43mgrad_tensors_\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    357\u001B[39m \u001B[43m    \u001B[49m\u001B[43mretain_graph\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    358\u001B[39m \u001B[43m    \u001B[49m\u001B[43mcreate_graph\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    359\u001B[39m \u001B[43m    \u001B[49m\u001B[43minputs_tuple\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    360\u001B[39m \u001B[43m    \u001B[49m\u001B[43mallow_unreachable\u001B[49m\u001B[43m=\u001B[49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\n\u001B[32m    361\u001B[39m \u001B[43m    \u001B[49m\u001B[43maccumulate_grad\u001B[49m\u001B[43m=\u001B[49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\n\u001B[32m    362\u001B[39m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m~\\anaconda3\\envs\\DATAENLIGHT_AI_LAB\\Lib\\site-packages\\torch\\autograd\\graph.py:841\u001B[39m, in \u001B[36m_engine_run_backward\u001B[39m\u001B[34m(t_outputs, *args, **kwargs)\u001B[39m\n\u001B[32m    839\u001B[39m     unregister_hooks = _register_logging_hooks_on_whole_graph(t_outputs)\n\u001B[32m    840\u001B[39m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[32m--> \u001B[39m\u001B[32m841\u001B[39m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mVariable\u001B[49m\u001B[43m.\u001B[49m\u001B[43m_execution_engine\u001B[49m\u001B[43m.\u001B[49m\u001B[43mrun_backward\u001B[49m\u001B[43m(\u001B[49m\u001B[43m  \u001B[49m\u001B[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001B[39;49;00m\n\u001B[32m    842\u001B[39m \u001B[43m        \u001B[49m\u001B[43mt_outputs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m*\u001B[49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m*\u001B[49m\u001B[43m*\u001B[49m\u001B[43mkwargs\u001B[49m\n\u001B[32m    843\u001B[39m \u001B[43m    \u001B[49m\u001B[43m)\u001B[49m  \u001B[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001B[39;00m\n\u001B[32m    844\u001B[39m \u001B[38;5;28;01mfinally\u001B[39;00m:\n\u001B[32m    845\u001B[39m     \u001B[38;5;28;01mif\u001B[39;00m attach_logging_hooks:\n",
-      "\u001B[31mRuntimeError\u001B[39m: one of the variables needed for gradient computation has been modified by an inplace operation: [torch.FloatTensor [1, 3]], which is output 0 of AddBackward0, is at version 4; expected version 3 instead. Hint: enable anomaly detection to find the operation that failed to compute its gradient, with torch.autograd.set_detect_anomaly(True)."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "layers.0.0.weight has gradient mean of 0.0014432319439947605\n",
+      "layers.1.0.weight has gradient mean of 0.004846962168812752\n",
+      "layers.2.0.weight has gradient mean of 0.0041389018297195435\n",
+      "layers.3.0.weight has gradient mean of 0.00591512955725193\n",
+      "layers.4.0.weight has gradient mean of 0.03265950828790665\n"
      ]
     }
    ],
-   "execution_count": 120
+   "execution_count": 131
   },
   {
    "metadata": {},
