--- a/Mastering and Building LLM course/CH4/gqa/Grouped-Query Attention Implementation.ipynb
+++ b/Mastering and Building LLM course/CH4/gqa/Grouped-Query Attention Implementation.ipynb
@@ -539,150 +539,17 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": [
-    "class TransformerBlock(nn.Module):\n",
-    "    def __init__(self, cfg):\n",
-    "        super().__init__()\n",
-    "        self.att = GroupedQueryAttention(\n",
-    "            d_in=cfg[\"emb_dim\"],\n",
-    "            d_out=cfg[\"emb_dim\"],\n",
-    "            num_heads=cfg[\"n_heads\"],\n",
-    "            num_kv_groups=cfg[\"n_kv_groups\"],\n",
-    "            dropout=cfg[\"drop_rate\"],\n",
-    "            qkv_bias=cfg[\"qkv_bias\"])\n",
-    "        self.ff = FeedForward(cfg)\n",
-    "        self.norm1 = LayerNorm(cfg[\"emb_dim\"])\n",
-    "        self.norm2 = LayerNorm(cfg[\"emb_dim\"])\n",
-    "        self.drop_shortcut = nn.Dropout(cfg[\"drop_rate\"])\n",
-    "\n",
-    "    def forward(self, x, use_cache=False):\n",
-    "        # Shortcut connection for attention block\n",
-    "        shortcut = x\n",
-    "        x = self.norm1(x)\n",
-    "\n",
-    "        # x = self.att(x)   # Shape [batch_size, num_tokens, emb_size]\n",
-    "        ####################################################\n",
-    "        #  KV cache-related\n",
-    "        x = self.att(x, use_cache=use_cache)\n",
-    "        ####################################################\n",
-    "\n",
-    "        x = self.drop_shortcut(x)\n",
-    "        x = x + shortcut  # Add the original input back\n",
-    "\n",
-    "        # Shortcut connection for feed-forward block\n",
-    "        shortcut = x\n",
-    "        x = self.norm2(x)\n",
-    "        x = self.ff(x)\n",
-    "        x = self.drop_shortcut(x)\n",
-    "        x = x + shortcut  # Add the original input back\n",
-    "\n",
-    "        return x"
-   ],
-   "id": "84bd7d3dd9d9d56c"
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-19T18:47:12.800259Z",
-     "start_time": "2026-02-19T18:47:12.734051Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "torch.manual_seed(123)\n",
-    "trb = TransformerBlock(cfg = GPT_CONFIG_124M)\n",
-    "x = torch.randn((4, 16, 768))\n",
-    "trb(x, use_cache=True)"
-   ],
-   "id": "78e22e4d8e6f7bd3",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "queries.shape=torch.Size([4, 12, 16, 64]), keys.shape=torch.Size([4, 12, 16, 64]), values.shape=torch.Size([4, 12, 16, 64])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[ 3.6094e-01, -1.2579e+00, -9.9960e-01,  ..., -9.0474e-01,\n",
-       "          -6.4033e-01, -6.8059e-01],\n",
-       "         [-1.1922e+00, -2.3845e+00, -2.7026e-02,  ...,  1.3562e+00,\n",
-       "          -1.1489e+00, -1.3625e+00],\n",
-       "         [-1.5047e-01, -5.6593e-01, -1.2998e+00,  ...,  4.3289e-01,\n",
-       "          -7.0673e-01, -3.1272e-01],\n",
-       "         ...,\n",
-       "         [ 7.3964e-01, -8.9510e-01, -3.6306e-01,  ..., -1.3957e+00,\n",
-       "          -4.7772e-01,  2.5455e+00],\n",
-       "         [ 1.8428e+00, -1.9542e+00, -8.9446e-01,  ..., -1.4467e+00,\n",
-       "          -3.8625e-01,  4.6340e-01],\n",
-       "         [-1.1149e+00, -5.9360e-01, -3.8470e-01,  ...,  3.4420e-01,\n",
-       "          -1.3897e+00,  9.8030e-01]],\n",
-       "\n",
-       "        [[-1.2351e-01,  6.8971e-01,  1.2014e-01,  ...,  2.8277e-01,\n",
-       "           1.5974e+00,  6.3322e-01],\n",
-       "         [ 9.2666e-02,  1.7620e+00,  2.4819e-01,  ...,  8.9675e-01,\n",
-       "           1.7424e-01, -3.7959e-01],\n",
-       "         [-3.2083e-01,  3.5708e-01, -6.6473e-01,  ...,  2.0882e-01,\n",
-       "           6.1683e-01,  3.0177e+00],\n",
-       "         ...,\n",
-       "         [-7.0430e-01, -1.3407e+00,  1.0216e-03,  ...,  1.1337e+00,\n",
-       "           5.5682e-01,  3.2826e-02],\n",
-       "         [ 7.4224e-01,  1.0047e-01,  1.9924e+00,  ...,  1.1720e-01,\n",
-       "          -5.4341e-01,  6.3977e-01],\n",
-       "         [-8.0057e-01, -6.6555e-02, -5.0618e-01,  ...,  7.4727e-01,\n",
-       "           2.3030e+00, -3.1724e-01]],\n",
-       "\n",
-       "        [[-6.0344e-01,  8.5225e-01, -6.6408e-01,  ..., -5.4395e-01,\n",
-       "          -1.4641e-01, -3.1094e+00],\n",
-       "         [ 5.4498e-01, -7.9496e-01, -3.1142e-01,  ..., -3.7453e-01,\n",
-       "          -6.0414e-01, -1.1284e+00],\n",
-       "         [-2.5147e-01, -5.1564e-01, -1.6185e+00,  ..., -9.1681e-01,\n",
-       "          -8.3800e-02,  1.5651e+00],\n",
-       "         ...,\n",
-       "         [ 4.0948e-01,  1.9439e+00, -1.4046e+00,  ...,  2.5496e-01,\n",
-       "          -4.2377e-01, -4.0811e-01],\n",
-       "         [-9.1147e-01, -1.5149e+00, -4.0929e-01,  ..., -2.1634e+00,\n",
-       "           4.9890e-01, -1.6060e-01],\n",
-       "         [-3.7690e-01, -7.7462e-01, -4.8545e-01,  ...,  6.9100e-01,\n",
-       "          -9.3427e-01, -6.1731e-01]],\n",
-       "\n",
-       "        [[ 1.3462e+00, -1.6073e-01,  8.4987e-01,  ...,  3.4845e-01,\n",
-       "          -8.4410e-01, -1.5949e+00],\n",
-       "         [ 2.8737e-01,  2.3067e+00,  1.5390e-01,  ...,  1.6352e-01,\n",
-       "          -6.4952e-01, -5.5308e-01],\n",
-       "         [-1.0644e+00,  1.3791e+00, -7.8620e-01,  ...,  9.2255e-01,\n",
-       "          -7.4661e-01, -1.1120e-01],\n",
-       "         ...,\n",
-       "         [ 1.3439e+00, -9.0915e-01, -1.4526e+00,  ..., -4.9170e-01,\n",
-       "           1.4025e-01,  2.0692e+00],\n",
-       "         [ 7.2187e-02, -2.2990e-01, -6.9597e-01,  ...,  1.5190e+00,\n",
-       "           8.3442e-01,  3.6245e-01],\n",
-       "         [-4.6703e-01, -1.1528e+00, -5.1070e-02,  ..., -1.2143e+00,\n",
-       "           6.0902e-01, -1.4588e-01]]], grad_fn=<AddBackward0>)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 27
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
    "id": "ae8559a6422136e"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-26T06:09:34.339452Z",
+     "start_time": "2026-02-26T06:09:34.319028Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "class GPTModel(nn.Module):\n",
     "    def __init__(self, cfg):\n",
@@ -742,7 +609,173 @@
     "        self.current_pos = 0\n",
     "    ####################################################"
    ],
-   "id": "e12128c3dbbe6afa"
+   "id": "e12128c3dbbe6afa",
+   "outputs": [],
+   "execution_count": 31
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-26T06:17:11.462706Z",
+     "start_time": "2026-02-26T06:17:01.991444Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "start_context = \"Hello, I am\"\n",
+    "tokenizer = tiktoken.get_encoding(\"gpt2\")\n",
+    "encoded = tokenizer.encode(start_context)\n",
+    "\n",
+    "torch.manual_seed(123)\n",
+    "model = GPTModel(GPT_CONFIG_124M)\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model.to(device, dtype=torch.bfloat16)\n",
+    "model.eval()"
+   ],
+   "id": "77b03085d3adbf1c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GPTModel(\n",
+       "  (tok_emb): Embedding(50257, 768)\n",
+       "  (pos_emb): Embedding(1024, 768)\n",
+       "  (drop_emb): Dropout(p=0.1, inplace=False)\n",
+       "  (trf_blocks): ModuleList(\n",
+       "    (0-11): 12 x TransformerBlock(\n",
+       "      (att): GroupedQueryAttention(\n",
+       "        (W_query): Linear(in_features=768, out_features=768, bias=False)\n",
+       "        (W_key): Linear(in_features=768, out_features=256, bias=False)\n",
+       "        (W_value): Linear(in_features=768, out_features=256, bias=False)\n",
+       "        (out_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+       "        (dropout): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "      (ff): FeedForward(\n",
+       "        (layers): Sequential(\n",
+       "          (0): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "          (1): GELU()\n",
+       "          (2): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "        )\n",
+       "      )\n",
+       "      (norm1): LayerNorm()\n",
+       "      (norm2): LayerNorm()\n",
+       "      (drop_shortcut): Dropout(p=0.1, inplace=False)\n",
+       "    )\n",
+       "  )\n",
+       "  (final_norm): LayerNorm()\n",
+       "  (out_head): Linear(in_features=768, out_features=50257, bias=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 34
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-26T06:17:14.374536Z",
+     "start_time": "2026-02-26T06:17:14.363785Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "encoded_tensor = torch.tensor(encoded, device=device).unsqueeze(0)\n",
+    "print(f\"\\n{50*'='}\\n{22*' '}IN\\n{50*'='}\")\n",
+    "print(\"\\nInput text:\", start_context)\n",
+    "print(\"Encoded input text:\", encoded)\n",
+    "print(\"encoded_tensor.shape:\", encoded_tensor.shape)\n",
+    "\n",
+    "if torch.cuda.is_available():\n",
+    "    torch.cuda.synchronize()\n",
+    "start = time.time()\n"
+   ],
+   "id": "ea08cbc1802e388d",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==================================================\n",
+      "                      IN\n",
+      "==================================================\n",
+      "\n",
+      "Input text: Hello, I am\n",
+      "Encoded input text: [15496, 11, 314, 716]\n",
+      "encoded_tensor.shape: torch.Size([1, 4])\n"
+     ]
+    }
+   ],
+   "execution_count": 35
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-26T13:03:08.978538Z",
+     "start_time": "2026-02-26T13:03:08.915623Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "out = model(encoded_tensor)\n",
+    "out"
+   ],
+   "id": "933d9d6732c2ad9d",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "queries.shape=torch.Size([1, 12, 4, 64]), keys.shape=torch.Size([1, 12, 4, 64]), values.shape=torch.Size([1, 12, 4, 64])\n",
+      "queries.shape=torch.Size([1, 12, 4, 64]), keys.shape=torch.Size([1, 12, 4, 64]), values.shape=torch.Size([1, 12, 4, 64])\n",
+      "queries.shape=torch.Size([1, 12, 4, 64]), keys.shape=torch.Size([1, 12, 4, 64]), values.shape=torch.Size([1, 12, 4, 64])\n",
+      "queries.shape=torch.Size([1, 12, 4, 64]), keys.shape=torch.Size([1, 12, 4, 64]), values.shape=torch.Size([1, 12, 4, 64])\n",
+      "queries.shape=torch.Size([1, 12, 4, 64]), keys.shape=torch.Size([1, 12, 4, 64]), values.shape=torch.Size([1, 12, 4, 64])\n",
+      "queries.shape=torch.Size([1, 12, 4, 64]), keys.shape=torch.Size([1, 12, 4, 64]), values.shape=torch.Size([1, 12, 4, 64])\n",
+      "queries.shape=torch.Size([1, 12, 4, 64]), keys.shape=torch.Size([1, 12, 4, 64]), values.shape=torch.Size([1, 12, 4, 64])\n",
+      "queries.shape=torch.Size([1, 12, 4, 64]), keys.shape=torch.Size([1, 12, 4, 64]), values.shape=torch.Size([1, 12, 4, 64])\n",
+      "queries.shape=torch.Size([1, 12, 4, 64]), keys.shape=torch.Size([1, 12, 4, 64]), values.shape=torch.Size([1, 12, 4, 64])\n",
+      "queries.shape=torch.Size([1, 12, 4, 64]), keys.shape=torch.Size([1, 12, 4, 64]), values.shape=torch.Size([1, 12, 4, 64])\n",
+      "queries.shape=torch.Size([1, 12, 4, 64]), keys.shape=torch.Size([1, 12, 4, 64]), values.shape=torch.Size([1, 12, 4, 64])\n",
+      "queries.shape=torch.Size([1, 12, 4, 64]), keys.shape=torch.Size([1, 12, 4, 64]), values.shape=torch.Size([1, 12, 4, 64])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0.4277,  0.4414,  0.4023,  ..., -0.2539, -0.5469,  0.1250],\n",
+       "         [-0.1846, -0.1738,  1.4141,  ...,  0.1885, -0.4688, -0.4121],\n",
+       "         [ 0.2637,  0.7773,  0.4473,  ..., -0.1396, -0.5977, -0.2344],\n",
+       "         [ 0.3984,  0.7227, -0.0601,  ..., -0.3516, -0.0562, -0.4570]]],\n",
+       "       device='cuda:0', dtype=torch.bfloat16, grad_fn=<UnsafeViewBackward0>)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 44
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "98c5db79c938d4db"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "1362460eca32948c"
   }
  ],
  "metadata": {
